--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
 
-    <img class="hero"></img>
+    <img class="hero">
 
     <main class="content">
         <section class="search-engine-optimization">
