--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon Social Solutions</title>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
     <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="digital marketing meeting">
 
     <main class="content">
-        <section class="search-engine-optimization">
+        <section class="content-discriptions">
             <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization" class="float-left"  />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -36,7 +36,7 @@
             </p>
         </section>
 
-        <section id="online-reputation-management"  class="online-reputation-management">
+        <section id="online-reputation-management"  class="content-discriptions">
             <img src="./assets/images/online-reputation-management.jpg" alt= "online reputation management" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -44,7 +44,7 @@
             </p>
         </section>
 
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing" class="content-discriptions">
             <img src="./assets/images/social-media-marketing.jpg" alt="social media marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -54,21 +54,21 @@
     </main>
 
     <aside class="benefits">
-        <section class="benefit-lead">
+        <section class="benefit-content">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="lead generation" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section class="benefit-content">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="brand awareness"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section class="benefit-content">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="cost management"/>
             <p>
