--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <img class="hero" src="./assets/images/digital-marketing-meeting.jpg" alt="digital marketing meeting">
 
     <main class="content">
-        <section class="content-discriptions">
+        <section id="search-engine-optimization" class="content-discriptions">
             <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization" class="float-left"  />
             <h2>Search Engine Optimization</h2>
             <p>
